[project]
name = "agno-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.2.10",
    "fastapi[standard]>=0.121.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mcp>=1.21.0",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
